[package]
name = "influxdb-derive"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = [
    "Jake Goulding <jake.goulding@integer32.com>",
    "Carol (Nichols || Goulding) <carol.nichols@integer32.com>"
]

[lib]
proc-macro = true

[dependencies]
itertools = "0.5.9"
quote = "0.3.12"
syn = "0.11.4"
